--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <a class="nav-link" href="#">Experiencia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled">Portafolio</a>
+              <a class="nav-link " href="#Porta">Portafolio</a>
             </li>
           </ul>
         </div>
@@ -246,7 +246,7 @@
 
     <!-- PORTAFOLIO -->
 
-    <h2 class="tituloportafolio pt-4">Portafolio</h2>
+    <h2 id="Porta" class="tituloportafolio pt-4">Portafolio</h2>
 
     <!-- Tarjetas-->
 
